@@ -41,6 +41,8 @@ https://github.com/elastic/beats/compare/v6.5.0...6.5[Check the HEAD diff]
 
 *Journalbeat*
 
+- Add missing journalbeat non breaking fixes. {pull}9106[9106]
+
 *Metricbeat*
 
 - Fix race condition when enriching events with kubernetes metadata. {issue}9055[9055] {issue}9067[9067]
